CHA: Nächste Spiele & Userpanel rechts

--- a/websoccer/templates/default/layout.twig
+++ b/websoccer/templates/default/layout.twig
@@ -29,7 +29,7 @@
 		{% endif %}
 		{{ env.getConfig("head_code")|raw }}
 	</head>
-	<body>
+	<body style="background-image: url('http://www.testws5.exklusiv-manager.de/forum/images/nero/background.jpg'); background-attachment:fixed;">
 	
 		{% block navigation %}
 		{% include 'navigationbar.twig' %}
@@ -98,7 +98,7 @@
 			
 			<hr/>
 			<footer>
-	        	<p><a href="{{ env.getInternalUrl("termsandconditions") }}">{{ i18n.getMessage("termsandconditions_navlabel") }}</a> 
+	        	<p style="color: #ccc"><a href="{{ env.getInternalUrl("termsandconditions") }}">{{ i18n.getMessage("termsandconditions_navlabel") }}</a> 
 	        	{% if env.getConfig("privacypolicy_url")|length > 0 %}| <a href="{{ env.getConfig("privacypolicy_url") }}">{{ i18n.getMessage("privacypolicy_navlabel") }}</a>{% endif %}
 	        	| <a href="{{ env.getInternalUrl("imprint") }}">{{ i18n.getMessage("imprint_navlabel") }}</a> 
 	        	| Powered by <a href="http://www.websoccer-sim.com" target="_blank">OpenWebSoccer-Sim</a>
