--- a/websoccer/templates/default/blocks/userprofile.twig
+++ b/websoccer/templates/default/blocks/userprofile.twig
@@ -8,6 +8,12 @@
 
 {% block box_content %}
 
+{% if userteam.team_picture|length %}
+	{% set teamPicture = "<img src=\""~ env.getConfig("context_root") ~ "/uploads/club/" ~ userteam.team_picture ~ "\" style=\"height: 75px;\" />" %}
+{% else %}
+	{% set teamPicture = "" %}
+{% endif %}
+
 {% if env.user.profilepicture|length > 0 %}
 	<a href="{{ env.getInternalUrl("user", "id=" ~ env.user.id) }}">
 		<img src="{{ env.user.profilepicture }}" class="pull-left" style="width: 40px; height: 40px; margin-right: 10px" alt="{{ env.user.username }}"/>
@@ -25,20 +31,6 @@
 </p>
 <div id="notificationspopupwrapper" style="display: none"><div id="notificationspopup">...</div></div>
 
-<p><em>{{ i18n.getMessage('userprofile_block_popularity') }}</em> <i class="icon-question-sign wstooltip" data-toggle="tooltip" title="{{ i18n.getMessage('userprofile_block_tooltip_popularity') }}"></i></p>
-{{ statisticelements.progressbar(profile.user_popularity) }}
-
-<p><em>{{ i18n.getMessage('userprofile_block_highscore') }}</em><br/>
-<a href="{{ env.getInternalUrl("highscore") }}">{{ profile.user_highscore|number_format(0, ',', '.') }}</a></p>
-
-{% if env.getUser().clubId > 0 %}
-<p><em>{{ i18n.getMessage('entity_club') }}</em>
-{% if userteam.team_picture|length %}
-	{% set teamPicture = "<img src=\""~ env.getConfig("context_root") ~ "/uploads/club/" ~ userteam.team_picture ~ "\" style=\"width: 20px; height: 20px;\" />" %}
-{% else %}
-	{% set teamPicture = "" %}
-{% endif %}
-
 {% if env.getConfig("max_number_teams_per_user") > 1 %}
 </p>
 
@@ -55,12 +47,22 @@
 </div>
 {% else %}
 	<br>
-	{{ teamPicture|raw }} <a href="{{ env.getInternalUrl("team", "id=" ~ userteam.team_id) }}" title="{{ i18n.getMessage("team_navlabel") }}">{{ userteam.team_name }}</a> 
+	{{ teamPicture|raw }}<br/><br/>
+	<a href="{{ env.getInternalUrl("team", "id=" ~ userteam.team_id) }}" title="{{ i18n.getMessage("team_navlabel") }}">{{ userteam.team_name }}</a> 
 	<a href="{{ env.getInternalUrl("league", "id=" ~ userteam.team_league_id) }}" title="{{ i18n.getMessage("userprofile_block_link_table") }}"><i class="icon-table darkIcon"></i></a>
 	</p>
 {% endif %}
 
-<p><em>{{ i18n.getMessage('entity_club_finanz_budget') }}</em><br/>
+<br/>
+
+<p><em>{{ i18n.getMessage('userprofile_block_popularity') }}</em> <i class="icon-question-sign wstooltip" data-toggle="tooltip" title="{{ i18n.getMessage('userprofile_block_tooltip_popularity') }}"></i></p>
+{{ statisticelements.progressbar(profile.user_popularity) }}
+
+<p><em>{{ i18n.getMessage('userprofile_block_highscore') }}</em>: 
+<a href="{{ env.getInternalUrl("highscore") }}">{{ profile.user_highscore|number_format(0, ',', '.') }}</a></p>
+
+{% if env.getUser().clubId > 0 %}
+<p><em>{{ i18n.getMessage('entity_club_finanz_budget') }}</em>: 
 <a href="{{ env.getInternalUrl("finances") }}">{{ userteam.team_budget|number_format(0, ',', '.') }} {{ env.getConfig("game_currency") }}</a></p>
 {% endif %}
 
@@ -72,4 +74,10 @@
 <p><i class="icon-off"></i> <a href="{{ env.getInternalActionUrl("logout") }}"> {{ i18n.getMessage('userprofile_block_link_logout') }}</a>
 | <i class="icon-user"></i> <a href="{{ env.getInternalUrl("profile") }}"> {{ i18n.getMessage('userprofile_block_link_profile') }}</a></p>
 
+<br/>
+<div class="ajaxLoadedBlock" id="nextMatchBlock" 
+	data-ajaxblock="nextmatch-userprofile" data-ignoreemptymessages="true">
+</div>	
+
 {% endblock %}
+
