--- a/websoccer/templates/default/blocks/results-list.twig
+++ b/websoccer/templates/default/blocks/results-list.twig
@@ -17,11 +17,11 @@
 			<tr>
 				<td>
 					{% if match.type == "Ligaspiel" %}
-						<i class="icon-shield wstooltip" title="{{ i18n.getMessage("option_Ligaspiel") }}"></i>
+						<i class="fa fa-globe wstooltip" title="{{ i18n.getMessage("option_Ligaspiel") }}"></i>
 					{% elseif match.type == "Freundschaft" %}
-						<i class="icon-smile wstooltip" title="{{ i18n.getMessage("option_Freundschaft") }}"></i>
+						<i class="fa fa-handshake-o wstooltip" title="{{ i18n.getMessage("option_Freundschaft") }}"></i>
 					{% else %}
-						<i class="icon-trophy wstooltip" title="{{ i18n.getMessage("option_Pokalspiel") }} ({{ match.cup_name }}, {{ match.cup_round }})"></i>
+						<i class="fa fa-trophy wstooltip" title="{{ i18n.getMessage("option_Pokalspiel") }} ({{ match.cup_name }}, {{ match.cup_round }})"></i>
 					{% endif %}
 					{{ env.getFormattedDatetime(match.date, i18n) }}
 				</td>
