--- a/websoccer/templates/default/blocks/lent_players.twig
+++ b/websoccer/templates/default/blocks/lent_players.twig
@@ -15,7 +15,7 @@
 				<th><abbr title="{{ i18n.getMessage("entity_player_note_last") }}"><i class="fa fa-cubes fa-lg"></i></abbr></th>
 				<th><abbr title="{{ i18n.getMessage("entity_player_note_schnitt") }}"><i class="fa fa-line-chart fa-lg"></i></abbr></th>				
 				<th><abbr title="{{ i18n.getMessage("entity_player_verein_id") }}"><i class="fa fa-universal-access fa-lg"></i></abbr></th>
-				<th><abbr title="{{ i18n.getMessage("entity_player_lending_matches") }}"><i class="fa fa-street-view fa-lg"></i></abbr></th>
+				<th><abbr title="{{ i18n.getMessage("entity_player_lending") }}"><i class="fa fa-street-view fa-lg"></i></abbr></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -44,11 +44,7 @@
 				<td><a href="{{ env.getInternalUrl("player", "id=" ~ player.id) }}">{{ player.firstname }} {% if player.pseudonym|length > 0 %}"{{ player.pseudonym }}" {% endif %}{{ player.lastname }}</a></td>
 				<td>{{ player.age }} Jahre</td>
 				<td>{{ player.marketvalue|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
-				<td>{{ player.contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}
-					{% if player.lending_fee > 0 %}
-						<br><small>+ {{ i18n.getMessage("entity_player_lending_fee") }}: {{ player.lending_fee|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</small> 
-					{% endif %}
-				</td>
+				<td>{{ player.contract_salary|number_format(0, ',', '.')  }} {{ env.getConfig("game_currency") }}</td>
 				<td>{{ player.st_matches }}</td>
 				<td>{{ player.st_goals }}</td>
 				<td>{{ player.st_assists }}</td>
@@ -57,8 +53,17 @@
 				<td>
 					<a href="{{ env.getInternalUrl("team", "id=" ~ player.team_id) }}">{{ player.team_name }}</a>
 				</td>
+				{% if player.lending == 0 %}
+					{% set lending = "Kaufangebot" %}
+				{% elseif player.lending == 1 %}
+					{% set lending = "Leihe bis WP" %}
+				{% elseif player.lending == 2 %}
+					{% set lending = "Leihe bis SE" %}
+				{% else %}
+					{% set lending = "Leihe 2 Saisons" %}
+				{% endif %}				
 				<td>
-					{{ player.lending_matches }}
+					{{ lending }}
 				</td>
 			</tr>
 			{% endfor %}
