--- a/websoccer/templates/default/views/formation_base.twig
+++ b/websoccer/templates/default/views/formation_base.twig
@@ -1,4 +1,4 @@
-{% extends "layout.twig" %}
+{% extends "layoutwithoutsidebar.twig" %}
 
 {% import "macros/formelements.twig" as formelements %}
 {% import "macros/statisticelements.twig" as statisticelements %}
