--- a/websoccer/templates/default/layout.twig
+++ b/websoccer/templates/default/layout.twig
@@ -101,6 +101,7 @@
 	        	{% if env.getConfig("privacypolicy_url")|length > 0 %}| <a href="{{ env.getConfig("privacypolicy_url") }}">{{ i18n.getMessage("privacypolicy_navlabel") }}</a>{% endif %}
 	        	| <a href="{{ env.getInternalUrl("imprint") }}">{{ i18n.getMessage("imprint_navlabel") }}</a> 
 	        	| Powered by <a href="http://www.websoccer-sim.com" target="_blank">OpenWebSoccer-Sim</a>
+	        	| Plugins Powered by <a href="https://www.app-raisal.de" target="_blank">Cris</a>
 	        	| <i class="icon-time"></i> {{ env.getFormattedDatetime(null) }}
 	        	</p>
 			</footer>
