--- a/websoccer/templates/default/views/matchesfs.twig
+++ b/websoccer/templates/default/views/matchesfs.twig
@@ -1,5 +1,6 @@
 {% extends "base.twig" %}
 {% import "macros/formelements.twig" as formelements %}
+{% import "macros/messagebox.twig" as messagebox %}
 
 {% block page_title %}
 {{ i18n.getMessage("matchesfs_navlabel") }}
@@ -7,64 +8,64 @@
 
 {% block page_content %}
 
-<link href="admin/bootstrap-datepicker/css/datepicker.css" rel="stylesheet">
-<link href="admin/bootstrap-timepicker/css/bootstrap-timepicker.min.css" rel="stylesheet" >
 
-<script src="admin/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-<script src="admin/bootstrap-datepicker/js/locales/bootstrap-datepicker.<?php echo $i18n->getCurrentLanguage(); ?>.js"></script>
-<script src="admin/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
+<ul class="nav nav-tabs" id="matchesFSTab">
+  <li class="active"><a href="#schedule" data-toggle="tab">{{ i18n.getMessage("matchesfs_tab_schedule") }}</a></li>
+  <li><a href="#requests" data-toggle="tab"
+    data-ajaxtarget="requests" data-ajaxblock="matchesfs-requests" class="ajaxLink">{{ i18n.getMessage("matchesfs_tab_requests") }}</a></li>
+</ul>
 
-<form class="form-horizontal" method="post">
+<div class="tab-content">
+    <div class="tab-pane active" id="schedule">
 
-    <div class="control-group">
-        <label class="control-label" for="datum">
-        <strong>Datum</strong></label>
+        <form class="form-horizontal" method="post">
 
-        <div class="controls">
-            <div class="input-append date datepicker">
-                <input name="datum_date" value="03.03.2017" class="input-small" type="text"><span class="add-on"><i class="icon-calendar"></i></span>
-            </div>
-            <div class="input-append bootstrap-timepicker">
-                <input name="datum_time" value="16:55" class="timepicker input-small" type="text"><span class="add-on"><i class="icon-time"></i></span>
-                <div class="bootstrap-timepicker-widget dropdown-menu">
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td><a href="#" data-action="incrementHour"><i class="icon-chevron-up"></i></a></td>
-                                <td class="separator">&nbsp;</td><td><a href="#" data-action="incrementMinute"><i class="icon-chevron-up"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td><input name="hour" class="bootstrap-timepicker-hour" maxlength="2" type="text"></td>
-                                <td class="separator">:</td><td><input name="minute" class="bootstrap-timepicker-minute" maxlength="2" type="text"></td>
-                            </tr>
-                            <tr>
-                                <td><a href="#" data-action="decrementHour"><i class="icon-chevron-down"></i></a></td>
-                                <td class="separator"></td><td><a href="#" data-action="decrementMinute"><i class="icon-chevron-down"></i></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
+            <div class="control-group">
+                <label class="control-label" for="date">
+                    <strong>{{ i18n.getMessage('matchesfs_date_label') }}</strong>
+                </label>
+
+                <div class="controls">
+                    <div class="input-append date datepicker">
+                        <input name="date_date" value="{{ matchesfs.date }}" class="input-small" type="text"><span class="add-on"><i class="icon-calendar"></i></span>
+                    </div>
+                    <div class="input-append bootstrap-timepicker">
+                        <input name="date_time" value="" class="timepicker input-small" type="text"><span class="add-on"><i class="icon-time"></i></span>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <div class="control-group">
+                <label class="control-label" for="opponent">
+                    <strong>{{ i18n.getMessage('matchesfs_opponent_label') }}</strong>
+                </label>
+
+                <div class="controls">
+                    <select id="opponent" name="opponent">
+                        <option></option>
+                        {% for team in teams %}
+                            <option value="{{ team.id }}">{{ team.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+
+            {{ formelements.checkbox("shootout", i18n.getMessage("matchesfs_shootout_label"), "0", false) }}
+
+            <div class="form-actions">
+                <button type="submit" 
+                class="btn btn-success">{{ i18n.getMessage('button_save_fs') }}</button>
+            </div>
+            <input type="hidden" name="page" value="matchesfs"/>
+            <input type="hidden" name="action" value="matchesfs-add-request"/>
+        </form>
+
     </div>
-
-
-    {{ formelements.textfield('datum', i18n.getMessage('datum_label'), 
-        env.getRequestParameter('datum'), true, validationMsg) }}
-
-    {{ formelements.slider('spieltyp', i18n.getMessage('spieltyp_label'), 
-        env.getRequestParameter('spieltyp'), true, validationMsg) }}
-
-    <div class="controls">
-        <input type="timestamp" id="datum" name="datum" required="true">
+    <div class="tab-pane" id="requests">
+        ...
     </div>
+</div>
 
-    <div class="form-actions">
-        <button type="submit" 
-        class="btn btn-success">{{ i18n.getMessage('button_save') }}</button>
-    </div>
-    <input type="hidden" name="page" value="hello"/>
-    <input type="hidden" name="action" value="sayhello"/>
-</form>
+<p style="text-align: center; font-style: italic;">Freundschaftsspiel Plugin &copy; 2017 by <a href="https://www.app-raisal.de" target="_blank">Cris</a></p>
 
 {% endblock %}
